--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <button>Learn more</button>
           </div>
         </div>
-        <!-- Конец элементов -->
+        <!-- Конец элементов изменение 1 -->
       </div>
       <!-- Конец грид контейнера -->
     </div>
