--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div class="container--common">
             <h2 class="h2--common">Skills</h2>
             <div class="skills__grid">
-                <!-- Элемент 1 -->
+
+                <!-- #region Элемент 1 -->
                 <div class="skills__grid-item speaking">
                     <div class="skills__grid-image">
                         <img src="img/Shared goals-bro 1.png" alt="Speaking">
@@ -28,7 +29,9 @@
                         <button>Learn more</button>
                     </div>
                 </div>
-                <!-- Элемент 2 -->
+                <!-- #endregion Элемент 1 -->
+
+                <!-- #region Элемент 2 -->
                 <div class="skills__grid-item writing">
                     <div class="skills__grid-image">
                         <img src="img/Typewriter-bro 1.png" alt="Writing">
@@ -40,7 +43,9 @@
                         <button>Learn more</button>
                     </div>
                 </div>
-                <!-- Элемент 3 -->
+                <!-- #endregion Элемент 2 -->
+
+                <!-- #region Элемент 3 -->
                 <div class="skills__grid-item reading">
                     <div class="skills__grid-image">
                         <img src="img/House bookshelves-bro 1.png" alt="Reading">
@@ -52,7 +57,9 @@
                         <button>Learn more</button>
                     </div>
                 </div>
-                <!-- Элемент 4 -->
+                <!-- #endregion Элемент 3 -->
+
+                <!-- #region Элемент 4 -->
                 <div class="skills__grid-item listening">
                     <div class="skills__grid-image">
                         <img src="img/Podcast audience-bro 1.png" alt="Listening">
@@ -64,13 +71,17 @@
                         <button>Learn more</button>
                     </div>
                 </div>
+                <!-- #endregion Элемент 4 -->
+
                 <!-- Конец элементов изменение 1 -->
             </div>
             <!-- Конец грид контейнера -->
+
         </div>
         <!-- Конец контейнера -->
+
     </section>
-    <!-- #endregion -->
+    <!-- #endregion Section Skills -->
 
 </body>
 
