--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
-
     <!-- #region Подключаем шрифты Poppins: -->
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,78 +19,109 @@
 </head>
 
 <body>
-
-    <!-- #region Section Skills -->
-    <section class="section--skills">
+    <header class="header" id="top">
         <div class="container--common">
-            <h2 class="h2--common">Skills</h2>
-            <div class="skills__grid">
-
-                <!-- #region Элемент 1 -->
-                <div class="skills__grid-item speaking">
-                    <div class="skills__grid-image">
-                        <img src="img/Shared goals-bro 1.png" alt="Speaking">
-                    </div>
-                    <div class="skills__grid-content">
-                        <h3>Speaking</h3>
-                        <p>Improve your English skills and confidence. Live classes and interactive lessons online. 20%
-                            extra free for a limited time only</p>
-                        <button>Learn more</button>
-                    </div>
+            <div class="header--container">
+                <div class="header__logo">
+                    <a class="header__logo--a" href="https://github.com/TutEvgen1984/site_4_portfolio"
+                        title="https://github.com/TutEvgen1984/site_4_portfolio" Britlex</a>
                 </div>
-                <!-- #endregion Элемент 1 -->
-
-                <!-- #region Элемент 2 -->
-                <div class="skills__grid-item writing">
-                    <div class="skills__grid-image">
-                        <img src="img/Typewriter-bro 1.png" alt="Writing">
-                    </div>
-                    <div class="skills__grid-content">
-                        <h3>Writing</h3>
-                        <p>One of the most important and extensive areas of natural science, the science that studies
-                            substances, also their composition</p>
-                        <button>Learn more</button>
-                    </div>
-                </div>
-                <!-- #endregion Элемент 2 -->
-
-                <!-- #region Элемент 3 -->
-                <div class="skills__grid-item reading">
-                    <div class="skills__grid-image">
-                        <img src="img/House bookshelves-bro 1.png" alt="Reading">
-                    </div>
-                    <div class="skills__grid-content">
-                        <h3>Reading</h3>
-                        <p>perception and response actions of the user resulting from the use and/or upcoming use of the
-                            product, system or service</p>
-                        <button>Learn more</button>
-                    </div>
-                </div>
-                <!-- #endregion Элемент 3 -->
-
-                <!-- #region Элемент 4 -->
-                <div class="skills__grid-item listening">
-                    <div class="skills__grid-image">
-                        <img src="img/Podcast audience-bro 1.png" alt="Listening">
-                    </div>
-                    <div class="skills__grid-content">
-                        <h3>Listening</h3>
-                        <p>Here you can find activities to practise your listening skills. Listening will help you to
-                            improve your understanding</p>
-                        <button>Learn more</button>
-                    </div>
-                </div>
-                <!-- #endregion Элемент 4 -->
-
-                <!-- Конец элементов изменение 1 -->
+                <nav class="header__nav">
+                    <ul>
+                        <li class="header__nav--li-01"><a class="header__nav-a" href="#section_01"
+                                title="Go to section_01">Home</a></li>
+                        <li class="header__nav--li-02"><a class="header__nav-a" href="#section_02"
+                                title="Go to section_02">Skills</a></li>
+                        <li class="header__nav--li-03"><a class="header__nav-a" href="#section_03"
+                                title="Go to section_03">About Us</a></li>
+                        <li class="header__nav--li-04"><a class="header__nav-a" href="#section_04"
+                                title="Go to section_04">Pricing</a></li>
+                        <li class="header__nav--li-05"><a class="header__nav-a" href="#section_05"
+                                title="Go to section_05">Contacts</a></li>
+                    </ul>
+                </nav>
             </div>
-            <!-- Конец грид контейнера -->
-
         </div>
-        <!-- Конец контейнера -->
+    </header>
 
-    </section>
-    <!-- #endregion Section Skills -->
+    <main>
+        <!-- #region Section Skills -->
+        <section class="section--skills">
+            <div class="container--common">
+                <h2 class="h2--common">Skills</h2>
+                <div class="skills__grid">
+
+                    <!-- #region Элемент 1 -->
+                    <div class="skills__grid-item speaking">
+                        <div class="skills__grid-image">
+                            <img src="img/Shared goals-bro 1.png" alt="Speaking">
+                        </div>
+                        <div class="skills__grid-content">
+                            <h3>Speaking</h3>
+                            <p>Improve your English skills and confidence. Live classes and interactive lessons online.
+                                20%
+                                extra free for a limited time only</p>
+                            <button>Learn more</button>
+                        </div>
+                    </div>
+                    <!-- #endregion Элемент 1 -->
+
+                    <!-- #region Элемент 2 -->
+                    <div class="skills__grid-item writing">
+                        <div class="skills__grid-image">
+                            <img src="img/Typewriter-bro 1.png" alt="Writing">
+                        </div>
+                        <div class="skills__grid-content">
+                            <h3>Writing</h3>
+                            <p>One of the most important and extensive areas of natural science, the science that
+                                studies
+                                substances, also their composition</p>
+                            <button>Learn more</button>
+                        </div>
+                    </div>
+                    <!-- #endregion Элемент 2 -->
+
+                    <!-- #region Элемент 3 -->
+                    <div class="skills__grid-item reading">
+                        <div class="skills__grid-image">
+                            <img src="img/House bookshelves-bro 1.png" alt="Reading">
+                        </div>
+                        <div class="skills__grid-content">
+                            <h3>Reading</h3>
+                            <p>perception and response actions of the user resulting from the use and/or upcoming use of
+                                the
+                                product, system or service</p>
+                            <button>Learn more</button>
+                        </div>
+                    </div>
+                    <!-- #endregion Элемент 3 -->
+
+                    <!-- #region Элемент 4 -->
+                    <div class="skills__grid-item listening">
+                        <div class="skills__grid-image">
+                            <img src="img/Podcast audience-bro 1.png" alt="Listening">
+                        </div>
+                        <div class="skills__grid-content">
+                            <h3>Listening</h3>
+                            <p>Here you can find activities to practise your listening skills. Listening will help you
+                                to
+                                improve your understanding</p>
+                            <button>Learn more</button>
+                        </div>
+                    </div>
+                    <!-- #endregion Элемент 4 -->
+
+                    <!-- Конец элементов изменение 1 -->
+                </div>
+                <!-- Конец грид контейнера -->
+
+            </div>
+            <!-- Конец контейнера -->
+
+        </section>
+        <!-- #endregion Section Skills -->
+    </main>
+
 
 </body>
 
