--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
 </head>
 
 <body>
-    <header class="header" id="top">
+    <!-- #region Header -->
+    <header class="header" id="home">
         <div class="container--common">
             <div class="header--container">
                 <div class="header__logo">
                     <a class="header__logo--a" href="https://github.com/TutEvgen1984/site_4_portfolio"
-                        title="https://github.com/TutEvgen1984/site_4_portfolio" Britlex</a>
+                        title="https://github.com/TutEvgen1984/site_4_portfolio">Brit<span
+                            class="header__logo--right-text">lex</span> </a>
                 </div>
                 <nav class="header__nav">
                     <ul>
-                        <li class="header__nav--li-01"><a class="header__nav-a" href="#section_01"
+                        <li class="header__nav--li-01"><a class="header__nav-a" href="#home"
                                 title="Go to section_01">Home</a></li>
-                        <li class="header__nav--li-02"><a class="header__nav-a" href="#section_02"
+                        <li class="header__nav--li-02"><a class="header__nav-a" href="#section--skills"
                                 title="Go to section_02">Skills</a></li>
                         <li class="header__nav--li-03"><a class="header__nav-a" href="#section_03"
                                 title="Go to section_03">About Us</a></li>
@@ -40,13 +42,15 @@
                                 title="Go to section_05">Contacts</a></li>
                     </ul>
                 </nav>
+                <button class="header__btn" type="button" title="">Let`s Talk</button>
             </div>
         </div>
     </header>
+    <!-- #endregion Header -->
 
     <main>
         <!-- #region Section Skills -->
-        <section class="section--skills">
+        <section class="section--skills" id="section--skills">
             <div class="container--common">
                 <h2 class="h2--common">Skills</h2>
                 <div class="skills__grid">
