--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <!-- #region Header -->
-    <header class="header" id="home">
+    <header class="header" id="top">
         <div class="container--common">
             <div class="header--container">
                 <div class="header__logo">
@@ -30,8 +30,8 @@
                 </div>
                 <nav class="header__nav">
                     <ul>
-                        <li class="header__nav--li-01"><a class="header__nav-a" href="#home"
-                                title="Go to section_01">Home</a></li>
+                        <li class="header__nav--li-01"><a class="header__nav-a" href="#section--home"
+                                title="Go to top of site">Home</a></li>
                         <li class="header__nav--li-02"><a class="header__nav-a" href="#section--skills"
                                 title="Go to section_02">Skills</a></li>
                         <li class="header__nav--li-03"><a class="header__nav-a" href="#section_03"
@@ -49,6 +49,30 @@
     <!-- #endregion Header -->
 
     <main>
+        <!-- #region Section Home -->
+        <section class="section--home" id="section--home">
+            <div class="container--common">
+                <div class="container--home">
+                    <div class="home--left-side">
+                        <div class="home--left-side__title-plus-img">
+                            <h1 class="home--left-side__title">Learn<br>Any Foreign<br>Language</h1>
+                            <div class="home--left-side__div-img"><img class="home--left-side__img"
+                                    src="img/light-bulb-svgrepo-com 1.png" alt="light bulb"></div>
+                        </div>
+                        <p class="home--left-side__p">With our teachers who write a program for each student, you will
+                            be able to make your first
+                            sketch after the first lesson.
+                        </p>
+                        <button class="home--left-side__button">Get started</button>
+                    </div>
+                    <div class="home--right-side">
+                        <img class="home--right-side--img" src="img/Learning languages-bro 1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- #endregion Section Home -->
+
         <!-- #region Section Skills -->
         <section class="section--skills" id="section--skills">
             <div class="container--common">
