--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- #region Section Home -->
         <section class="section--home" id="section--home">
             <div class="container--common">
-                <div class="container--home">
+                <div class="home____flex-group">
                     <div class="home--left-side">
                         <div class="home--left-side__title-plus-img">
                             <h1 class="home--left-side__title">Learn<br>Any Foreign<br>Language</h1>
@@ -76,7 +76,7 @@
         <!-- #region Section Skills -->
         <section class="section--skills" id="section--skills">
             <div class="container--common">
-                <h2 class="h2--common">Skills</h2>
+                <h2 class="h2--common text-center--common">Skills</h2>
                 <div class="skills__grid">
 
                     <!-- #region Элемент 1 -->
@@ -148,8 +148,79 @@
 
         </section>
         <!-- #endregion Section Skills -->
-    </main>
 
+        <!-- #region Section About us -->
+        <section class="section--about-us" id="section--about-us">
+            <div class="container--common">
+                <div class="about-us__flex-group">
+
+                    <div class="about-us__left-side">
+                        <h2 class="h2--common">About Us</h2>
+                        <p class="about-us__p">The model offers a framework for discussing problems related to the
+                            user's experience, as
+                            well as
+                            possible ways and means of solving them. Application development begins at the top level
+                            (strategy), where the future software product is described quite abstractly from the point
+                            of
+                            view of the expectations of both users and the customer.
+                        </p>
+                        <div class="about-us__left-side--quantity-group">
+
+                            <!-- элемент 1 -->
+                            <div class="quantity-group__item">
+                                <h2 class="h2--common">800</h2>
+                                <p class="quantity-group__p">Pupils</p>
+                            </div>
+
+                            <!-- элемент 2 -->
+                            <div class="quantity-group__item">
+                                <h2 class="h2--common">18</h2>
+                                <p class="quantity-group__p">Teachers</p>
+                            </div>
+
+                            <!-- элемент 3 -->
+                            <div class="quantity-group__item">
+                                <h2 class="h2--common">6</h2>
+                                <p class="quantity-group__p">Foreign languages</p>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="about-us__right-side">
+                        <img src="img/Business competition-bro 1.png" alt="">
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- #endregion Section About us -->
+
+        <!-- #region Section Pricing -->
+        <section class="section--pricing">
+            <div class="container--common">
+                <div class="pricing__flex-group">
+
+                    <!-- Карточка 1 -->
+                    <div class="pricing__card">
+                        <img src="img/Online test-bro 1.png" alt="">
+                        <h3>Self-study online course</h3>
+                        <p>Start learning English online in live classes
+                            with qualified EC teachers and students
+                            from all over the world.
+                        </p>
+
+
+                    </div>
+
+                    <!-- Карточка 2 -->
+
+
+                </div>
+            </div>
+        </section>
+        <!-- #endregion Section Pricing -->
+    </main>
 
 </body>
 
