--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="home--left-side">
                         <div class="home--left-side__title-plus-img">
                             <h1 class="home--left-side__title">Learn<br>Any Foreign<br>Language</h1>
-                            <div class="home--left-side__div-img"><img class="home--left-side__img"
+                            <div class="home--left-side__div-img"><img class="img--common"
                                     src="img/light-bulb-svgrepo-com 1.png" alt="light bulb"></div>
                         </div>
                         <p class="home--left-side__p">With our teachers who write a program for each student, you will
@@ -66,7 +66,7 @@
                         <button class="home--left-side__button">Get started</button>
                     </div>
                     <div class="home--right-side">
-                        <img class="home--right-side--img" src="img/Learning languages-bro 1.png" alt="">
+                        <img class="img--common" src="img/Learning languages-bro 1.png" alt="">
                     </div>
                 </div>
             </div>
@@ -82,10 +82,10 @@
                     <!-- #region Элемент 1 -->
                     <div class="skills__grid-item speaking">
                         <div class="skills__grid-image">
-                            <img src="img/Shared goals-bro 1.png" alt="Speaking">
+                            <img class="img--common" src="img/Shared goals-bro 1.png" alt="Speaking">
                         </div>
                         <div class="skills__grid-content">
-                            <h3>Speaking</h3>
+                            <h3 class="h3--common">Speaking</h3>
                             <p>Improve your English skills and confidence. Live classes and interactive lessons online.
                                 20%
                                 extra free for a limited time only</p>
@@ -97,10 +97,10 @@
                     <!-- #region Элемент 2 -->
                     <div class="skills__grid-item writing">
                         <div class="skills__grid-image">
-                            <img src="img/Typewriter-bro 1.png" alt="Writing">
+                            <img class="img--common" src="img/Typewriter-bro 1.png" alt="Writing">
                         </div>
                         <div class="skills__grid-content">
-                            <h3>Writing</h3>
+                            <h3 class="h3--common">Writing</h3>
                             <p>One of the most important and extensive areas of natural science, the science that
                                 studies
                                 substances, also their composition</p>
@@ -112,10 +112,10 @@
                     <!-- #region Элемент 3 -->
                     <div class="skills__grid-item reading">
                         <div class="skills__grid-image">
-                            <img src="img/House bookshelves-bro 1.png" alt="Reading">
+                            <img class="img--common" src="img/House bookshelves-bro 1.png" alt="Reading">
                         </div>
                         <div class="skills__grid-content">
-                            <h3>Reading</h3>
+                            <h3 class="h3--common">Reading</h3>
                             <p>perception and response actions of the user resulting from the use and/or upcoming use of
                                 the
                                 product, system or service</p>
@@ -127,10 +127,10 @@
                     <!-- #region Элемент 4 -->
                     <div class="skills__grid-item listening">
                         <div class="skills__grid-image">
-                            <img src="img/Podcast audience-bro 1.png" alt="Listening">
+                            <img class="img--common" src="img/Podcast audience-bro 1.png" alt="Listening">
                         </div>
                         <div class="skills__grid-content">
-                            <h3>Listening</h3>
+                            <h3 class="h3--common">Listening</h3>
                             <p>Here you can find activities to practise your listening skills. Listening will help you
                                 to
                                 improve your understanding</p>
@@ -156,7 +156,8 @@
 
                     <div class="about-us__left-side">
                         <h2 class="h2--common">About Us</h2>
-                        <p class="about-us__p">The model offers a framework for discussing problems related to the
+                        <p class="p--common about-us__p">The model offers a framework for discussing problems related to
+                            the
                             user's experience, as
                             well as
                             possible ways and means of solving them. Application development begins at the top level
@@ -188,7 +189,7 @@
                     </div>
 
                     <div class="about-us__right-side">
-                        <img src="img/Business competition-bro 1.png" alt="">
+                        <img class="img--common" src="img/Business competition-bro 1.png" alt="">
                     </div>
 
                 </div>
@@ -199,22 +200,54 @@
         <!-- #region Section Pricing -->
         <section class="section--pricing">
             <div class="container--common">
+                <h2 class="h2--common text-center--common">Pricing</h2>
                 <div class="pricing__flex-group">
 
                     <!-- Карточка 1 -->
                     <div class="pricing__card">
-                        <img src="img/Online test-bro 1.png" alt="">
-                        <h3>Self-study online course</h3>
-                        <p>Start learning English online in live classes
+                        <div class="pricing__div--img">
+                            <img class="img--common" src="img/Online test-bro 1.png" alt="">
+                        </div>
+                        <h3 class="h3--common pricing__h3">Self-study online course</h3>
+                        <p class="p--common pricing__p">Start learning English online in live classes
                             with qualified EC teachers and students
                             from all over the world.
                         </p>
-
-
+                        <div class="pricing__cost-btn">
+                            <div class="pricing__price">£5.99</div>
+                            <div class="pricing__period">per month</div>
+                        </div>
                     </div>
 
                     <!-- Карточка 2 -->
+                    <div class="pricing__card">
+                        <div class="pricing__div--img">
+                            <img class="img--common" src="img/Lesson-bro 1.png" alt="">
+                        </div>
+                        <h3 class="h3--common pricing__h3">Live online classes</h3>
+                        <p class="p--common pricing__p">Interactive group classes with expert
+                            teachers. Free 7-day trial
+                        </p>
+                        <div class="pricing__cost-btn">
+                            <div class="pricing__price">£12.99</div>
+                            <div class="pricing__period">per month</div>
+                        </div>
+                    </div>
 
+                    <!-- Карточка 3 -->
+                    <div class="pricing__card">
+                        <div class="pricing__div--img">
+                            <img class="img--common" src="img/Webinar-bro 2.png" alt="">
+                        </div>
+                        <h3 class="h3--common pricing__h3">Personal Tuition</h3>
+                        <p class="p--common pricing__p">Online one-to-one English tutoring – enjoy
+                            our first session for only $1
+                        </p>
+                        <div class="pricing__cost-btn">
+                            <div class="pricing__price">£20.99</div>
+                            <div class="pricing__period">per month</div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
