--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <!-- #region Section Pricing -->
         <section class="section--pricing">
             <div class="container--common">
-                <h2 class="h2--common text-center--common">Pricing</h2>
+                <h2 class="h2--common text-center--common pricing__h2">Pricing</h2>
                 <div class="pricing__flex-group">
 
                     <!-- Карточка 1 -->
@@ -253,6 +253,21 @@
             </div>
         </section>
         <!-- #endregion Section Pricing -->
+
+        <!-- #region Section Contact us -->
+        <section class="section--contact-us">
+            <div class="container--common">
+                <div class="contact-us__flex-group">
+                    <div class="contact-us__left-side">
+                        <img src="img/Ресурс 1 1.png" alt="">
+                    </div>
+                    <div class="contact-us__right-side">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- #endregion Section Contact us -->
     </main>
 
 </body>
