--- a/index.html
+++ b/index.html
@@ -262,7 +262,16 @@
                         <img src="img/Ресурс 1 1.png" alt="">
                     </div>
                     <div class="contact-us__right-side">
-
+                        <h2 class="h2--common contact-us__h2">Contact Us</h2>
+                        <p class="p--common contact-us__p">Discover your current English level by taking our free online
+                            English test.Sign up to our newsletter for learning tips and free resources
+                        </p>
+                        <form class="contact-us__form" action="#">
+                            <input class="contact-us__input" type="email" name="contact-us--input-email"
+                                placeholder="Enter Your E-mail">
+                            <button class="contact-us__btn-subscribe" type="submit"
+                                name="contact-us--submit">Subscribe</button>
+                        </form>
                     </div>
                 </div>
             </div>
