--- a/index.html
+++ b/index.html
@@ -279,6 +279,14 @@
         <!-- #endregion Section Contact us -->
     </main>
 
+    <!-- #region Footer -->
+    <footer>
+        <div>
+
+        </div>
+    </footer>
+    <!-- #endregion Footer -->
+
 </body>
 
 </html>
