--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <header class="header" id="top">
         <div class="container--common">
             <div class="header--container">
-                <div class="header__logo">
-                    <a class="header__logo--a" href="https://github.com/TutEvgen1984/site_4_portfolio"
+                <div class="logo">
+                    <a class="logo--a" href="https://github.com/TutEvgen1984/site_4_portfolio"
                         title="https://github.com/TutEvgen1984/site_4_portfolio">Brit<span
-                            class="header__logo--right-text">lex</span> </a>
+                            class="logo--right-text">lex</span> </a>
                 </div>
                 <nav class="header__nav">
                     <ul>
@@ -280,9 +280,23 @@
     </main>
 
     <!-- #region Footer -->
-    <footer>
-        <div>
-
+    <footer class="footer">
+        <div class="container--common">
+            <div class="footer--container">
+                <div class="footer__line"></div>
+                <div class="logo">
+                    <a class="logo--a" href="https://github.com/TutEvgen1984/site_4_portfolio"
+                        title="https://github.com/TutEvgen1984/site_4_portfolio">Brit<span
+                            class="logo--right-text">lex</span> </a>
+                </div>
+                <nav class="footer__nav">
+                    <ul class="footer__ul">
+                        <li class="footer__nav--li"><a class="footer__nav--li-a" href="#">Terms and Conditions</a></li>
+                        <li class="footer__nav--li"><a class="footer__nav--li-a" href="#">Privacy Policy</a></li>
+                        <li class="footer__nav--li"><a class="footer__nav--li-a" href="#">Cookie Policy</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </footer>
     <!-- #endregion Footer -->
